--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,31 @@ on:
       - "v*"
 
 jobs:
+  quality:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install ruff==0.9.10
+
+      - name: Run Ruff lint
+        run: |
+          ruff check .
+
+      - name: Run Ruff format check
+        run: |
+          ruff format --check .
+
   test-suite:
     runs-on: ubuntu-latest
     steps:
@@ -24,10 +49,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest-cov==5.0.0
 
-      - name: Run full pytest suite
+      - name: Run full pytest suite with coverage gate
         run: |
-          pytest tests
+          pytest tests --cov=app --cov-fail-under=75
 
   docker-release:
     if: startsWith(github.ref, 'refs/tags/')
