--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,11 +73,19 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Compute build metadata
+        id: build_meta
+        run: echo "build_time=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> "$GITHUB_OUTPUT"
+
       - name: Build and push image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
+          build-args: |
+            IPOCKET_VERSION=${{ github.ref_name }}
+            IPOCKET_COMMIT=${{ github.sha }}
+            IPOCKET_BUILD_TIME=${{ steps.build_meta.outputs.build_time }}
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/ipocket:${{ github.ref_name }}
             ${{ secrets.DOCKERHUB_USERNAME }}/ipocket:latest
